Added more languages. Added Conscientious Blabla item

--- a/translations/de/weapons.phrases.tf.txt
+++ b/translations/de/weapons.phrases.tf.txt
@@ -424,6 +424,10 @@
 	{
 		"de"	"Der Spalthammer"
 	}
+	"TF_CONSCIENTIOUSOBJECTOR"
+	{
+		"de"	"Der Kriegsdienstverweigerer"
+	}
 	"TF_NINEIRON"
 	{
 		"de"	"Nessies Neuner Eisen"
