--- a/translations/ru/weapons.phrases.tf.txt
+++ b/translations/ru/weapons.phrases.tf.txt
@@ -424,6 +424,10 @@
 	{
 		"ru"	"Молот"
 	}
+	"TF_CONSCIENTIOUSOBJECTOR"
+	{
+		"ru"	"Идейный уклонист"
+	}
 	"TF_NINEIRON"
 	{
 		"ru"	"Железная девятка Несси"
