--- a/translations/sv/weapons.phrases.tf.txt
+++ b/translations/sv/weapons.phrases.tf.txt
@@ -424,6 +424,10 @@
 	{
 		"sv"	"Släggan"
 	}
+	"TF_CONSCIENTIOUSOBJECTOR"
+	{
+		"sv"	"Vapenvägraren"
+	}
 	"TF_NINEIRON"
 	{
 		"sv"	"Nessies Järnnia"
