--- a/translations/weapons.phrases.tf.txt
+++ b/translations/weapons.phrases.tf.txt
@@ -424,6 +424,10 @@
 	{
 		"en"	"Maul"
 	}
+	"TF_CONSCIENTIOUSOBJECTOR"
+	{
+		"en"	"Conscientious Objector"
+	}
 	"TF_NINEIRON"
 	{
 		"en"	"Nessie's Nine Iron"
